# alpaka2

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/babelstream/: CMakeLists.txt
benchmark/babelstream/src/: babelStreamMainTest.cpp
benchmarks/: CMakeLists.txt
benchmarks/babelstream/: CMakeLists.txt
benchmarks/babelstream/src/: babelStreamCommon.hpp  babelStreamMainTest.cpp
cmake/: addExecutable.cmake  addLibrary.cmake
example/: CMakeLists.txt
example/heatEquation2D/src/: BoundaryKernel.hpp  StencilKernel.hpp  analyticalSolution.hpp  heatEquation2D.cpp  helpers.hpp  writeImage.hpp
example/tutorial/: CMakeLists.txt  README.md
example/tutorial/src/: 00_enumerate.cc  00_enumerate.cpp  01_blocking_queue.cc  01_queue.cc  01_queue.cpp  02_nonblocking_queue.cc  03_memory.cc  03_memory.cpp  04_views.cc  04_views.cpp  05_kernel.cc  05_kernel.cpp  06_cudaLikeKernel.cpp  07_chunkedData.cpp  config.h
example/vectorAdd/src/: vectorAdd.cpp
headerCheck/: CMakeLists.txt
include/alpaka/: Acc.hpp  Blocking.hpp  CVec.hpp  ComputeApiTraits.hpp  Device.hpp  FrameSpec.hpp  HostApiConcepts.hpp  HostApiTraits.hpp  KernelBundle.hpp  Platform.hpp  Queue.hpp  Simd.hpp  Tags.hpp  ThreadSpec.hpp  Trait.hpp  UniqueId.hpp  Vec.hpp  alpaka.hpp  cast.hpp  computeApi.hpp  concepts.hpp  hostApi.hpp  internal.hpp  math.hpp  onAcc.hpp  onHost.hpp  tag.hpp  trait.hpp  vecConcepts.hpp
include/alpaka/acc/: Acc.hpp  Cuda.hpp  Layer.hpp  Omp.hpp  One.hpp  Serial.hpp  makeAcc.hpp
include/alpaka/api/: api.hpp  cpu.hpp  cuda.hpp  executor.hpp  hip.hpp  trait.hpp  unifiedCudaHip.hpp
include/alpaka/api/cpu/: Api.hpp  Device.hpp  IdxLayer.hpp  Platform.hpp  Queue.hpp  atomic.hpp  executor.hpp  sysInfo.hpp  tag.hpp
include/alpaka/api/cpu/block/mem/: OmpStaticShared.hpp  SharedStorage.hpp  SingleThreadStaticShared.hpp
include/alpaka/api/cpu/block/sync/: NoOp.hpp  Omp.hpp
include/alpaka/api/cpu/blockSync/: NoOp.hpp  Omp.hpp
include/alpaka/api/cpu/exec/: OmpBlocks.hpp  OmpThreads.hpp  Serial.hpp
include/alpaka/api/cpu/mapping/: OmpBlocks.hpp  OmpThreads.hpp  Serial.hpp
include/alpaka/api/cpu/mem/: OmpStaticShared.hpp
include/alpaka/api/cuda/: Api.hpp  ComputeApi.hpp  Device.hpp  IdxLayer.hpp  MemcpyKind.hpp  Platform.hpp  Queue.hpp  atomic.hpp  atomicBuiltIn.hpp  executor.hpp  math.hpp
include/alpaka/api/hip/: Api.hpp  Device.hpp  IdxLayer.hpp  Platform.hpp  executor.hpp  math.hpp
include/alpaka/api/unifiedCudaHip/: ComputeApi.hpp  Device.hpp  MemcpyKind.hpp  Platform.hpp  Queue.hpp  atomic.hpp  atomicBuiltIn.hpp  concepts.hpp  executor.hpp  math.hpp  tag.hpp  trait.hpp
include/alpaka/core/: AlignedAlloc.hpp  ApiCudaRt.hpp  ApiHipRt.hpp  Assert.hpp  CallbackThread.hpp  Cuda.hpp  CudaHipCommon.hpp  Debug.hpp  DemangleTypeNames.hpp  Dict.hpp  Handle.hpp  PP.hpp  RemoveRestrict.hpp  Tag.hpp  UniformCudaHip.hpp  UniqueId.hpp  Unreachable.hpp  Utility.hpp  Vectorize.hpp  common.hpp  config.hpp  decay.hpp  util.hpp
include/alpaka/example/: executeForEach.hpp  executors.hpp
include/alpaka/math/: constants.hpp  math.hpp
include/alpaka/mem/: Buffer.hpp  Data.hpp  FlatIdxContainer.hpp  ForEach.hpp  IdxRange.hpp  Iter.hpp  LinearizedIdxContainer.hpp  MdSpan.hpp  ThreadSpace.hpp  TiledIdxContainer.hpp  TilingIdxContainer.hpp  View.hpp  layout.hpp
include/alpaka/meta/: NdLoop.hpp  filter.hpp
include/alpaka/onAcc/: Acc.hpp  GlobalMem.hpp  atomic.hpp  atomicHierarchy.hpp  atomicOp.hpp  internal.hpp  layout.hpp  traverse.hpp
include/alpaka/onHost/: Device.hpp  DeviceProperties.hpp  FrameSpec.hpp  Handle.hpp  Platform.hpp  Queue.hpp  ThreadSpec.hpp  concepts.hpp  internal.hpp  trait.hpp
include/alpaka/onHost/mem/: Data.hpp  View.hpp
scripts/: create-single-header.sh
tests/: block.cpp  deviceGlobalMem.cpp  dict.cpp  handle.cpp  hostAcc.cpp  platform.cpp  queue.cpp  sharedMem.cpp  vec.cpp
