#
# Copyright 2024 René Widera
# SPDX-License-Identifier: ISC
#

################################################################################
# Required CMake version.
################################################################################
cmake_minimum_required(VERSION 3.25)
project("alpakaBenchmarks" LANGUAGES CXX)
################################################################################
# Add subdirectories.
################################################################################

add_subdirectory("babelstream/")
